Fix comment clipping, add vote disabled tooltip

--- a/src/components/feed/Comment.css
+++ b/src/components/feed/Comment.css
@@ -66,6 +66,8 @@
   padding: 5px;
   overflow: hidden;
   margin-left: 14px;
+
+  max-height:fit-content;
 }
 blockquote {
   border-left: 3px solid grey;
